# arbitrage-engine

./: .gitignore  README.md  trade_data_coinbase.csv
cpp_engine/: CMakeLists.txt  arbitragegraph.cpp  arbitragegraph.h  main.cpp
python_utils/: data_logger.py
